# gantry-cv-cleaner

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: README.md
data/examples/: README.md
firmware/camera/: firmware_camera_esp32.cpp
models/: README.md
software/computer_vision/: README.md
software/computer_vision/data_processing/: convert_json_to_txt.py  video_to_image.py
software/computer_vision/model/pytorch_model/: yolo_prediction.py  yolo_train.py
software/hardware_control/: control_camera_esp32.py
software/vision/: README.md
